--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "jquery": "~2.1.4",
-    "foundation-sites": "^6.1.2"
+    "foundation-sites": "^6.1.2",
+    "magnific-popup": "^1.1.0"
   }
 }
